--- a/OpenCV Targeting and Aim/OpenCV Targeting and Aim.vcxproj.filters
+++ b/OpenCV Targeting and Aim/OpenCV Targeting and Aim.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="OpenCV_Target.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Serial.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCV_Target.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ArduinoComm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Serial.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
