--- a/OpenCV Targeting and Aim/OpenCV Targeting and Aim.vcxproj
+++ b/OpenCV Targeting and Aim/OpenCV Targeting and Aim.vcxproj
@@ -151,10 +151,12 @@
     <ClCompile Include="ArduinoComm.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="OpenCV_Target.cpp" />
+    <ClCompile Include="Serial.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ArduinoComm.h" />
     <ClInclude Include="OpenCV_Target.h" />
+    <ClInclude Include="Serial.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
